--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -26,7 +26,7 @@
              <ion-input #nombre type="text" [(ngModel)]="nameValue" label="Nombre" labelPlacement="floating" placeholder="Ej: Juan Antonio Pérez Gómez"></ion-input>
            </ion-item>
            <ion-item>
-             <ion-input #imagen type="text" [(ngModel)]="picValue" label="Imagen" labelPlacement="floating" placeholder="Ej: https://blabal.jpg" value="https://img.freepik.com/vector-premium/vector-icono-imagen-predeterminado-pagina-imagen-faltante-diseno-sitio-web-o-aplicacion-movil-no-hay-foto-disponible_87543-11093.jpg" [clearInput]="true"></ion-input>
+             <ion-input #imagen type="text" [(ngModel)]="picValue" label="Imagen" labelPlacement="floating" placeholder="Ej: https://blabal.jpg"></ion-input>
             </ion-item>
             <ion-item>
               <ion-input #carrera type="text" value="Ingeniería en Informática" label="Carrera" labelPlacement="floating" placeholder="Ingeniería en Informática"></ion-input>
