--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -39,7 +39,9 @@
        </ion-card>
         <p>Ya tienes cuenta?
           <ion-button fill="clear" [routerLink]="['/login']">Iniciar sesión</ion-button>
+          <ion-button fill="clear" (click)="Registrar20()" [routerLink]="['/login']">Importar 20 cuentas</ion-button>
         </p>
+        
     </ion-card-content>
   </ion-card>
 </ion-content>
