Limpieza y corrección de errores mínimos

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-title class="centrado" *ngFor="let user of listaUsuarioIniciado">Bienvenido/a {{ user.rut }}</ion-title>
+      <ion-title class="centrado" *ngFor="let user of listaUsuarioIniciado">Bienvenido/a {{ user.nombre }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
