--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,9 +2,9 @@
   <ion-card-header>
   </ion-card-header>
   <ion-card-content>
-    <img alt="Silhouette of mountains" src="{{ imagen }}"/>
     <ion-card-title>{{ nombre }}</ion-card-title>
-    <ion-card-title>{{ rut }}</ion-card-title>
+    <img alt="Silhouette of mountains" src="{{ imagen }}"/>
+    <ion-card-title>Rut: {{ rut }}</ion-card-title>
     <ion-card-subtitle>Correo electrónico: {{ correo }}</ion-card-subtitle>
     <ion-card-subtitle>Sede: {{ sede }}</ion-card-subtitle>
   </ion-card-content>
