--- a/src/app/pages/clases/clases.page.html
+++ b/src/app/pages/clases/clases.page.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content>
-  <div *ngFor ="let user of listaUsuarioIniciado">
-    <ion-button *ngIf="user.docente" [routerLink]="['/clases/crearclase']" color="success" expand="block">Crear Clase <ion-icon name="add-circle"></ion-icon></ion-button>
+  <div>
+    <ion-button [routerLink]="['/clases/crearclase']" color="success" expand="block">Crear Clase <ion-icon name="add-circle"></ion-icon></ion-button>
     <div class="contaier" *ngFor="let aux of listaClases">
       <ion-card>
         <app-clasecard [routerLink]="['/clases/', aux.id]"
