--- a/src/app/pages/clases/crearclase/crearclase.page.html
+++ b/src/app/pages/clases/crearclase/crearclase.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-title class="centrado">Crear Clase</ion-title>
+      <ion-title class="centrado">{{ "Crear clase" | translate }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -41,7 +41,7 @@
             <ion-item>
               <ion-input #docente type="text" [(ngModel)]="clase.docente" label="Docente" value="" labelPlacement="floating" placeholder="Puente Alto"></ion-input>
             </ion-item>
-           <ion-button color="secondary" (click)="addClase()">Crear Clase</ion-button>
+           <ion-button color="secondary" (click)="addClase()">{{"Crear clase" | translate}}</ion-button>
           </ion-card-content>
        </ion-card>
     </ion-card-content>
