--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -3,8 +3,8 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
       <div class="container" *ngFor="let user of listaUsuarioIniciado">
-        <ion-title *ngIf="user.docente" class="centrado">Docente</ion-title>
-        <ion-title *ngIf="user.docente == false" class="centrado">Estudiante</ion-title>
+        <ion-title *ngIf="user.docente" class="centrado">{{"Docente" | translate}}</ion-title>
+        <ion-title *ngIf="user.docente == false" class="centrado">{{"Estudiante" | translate}}</ion-title>
 
       </div>
     </ion-buttons>
